2019-05-07  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/main_window.cpp:
	- FormationDT以外を無効化

2019-05-02  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* m4/ax_boost_system.m4:
	* m4/ax_cxx_compile_stdcxx.m4:
	* m4/ax_cxx_compile_stdcxx_14.m4:
	* configure.ac:
	* m4/ax_boost_base.m4:
	* m4/qt.m4:
	* src/Makefile.am:
	* src/command.cpp:
	* src/config_dialog.cpp:
	* src/constraint_delegate.cpp:
	* src/constraint_edit_dialog.cpp:
	* src/constraint_view.cpp:
	* src/coordinate_delegate.cpp:
	* src/edit_canvas.cpp:
	* src/edit_dialog.cpp:
	* src/main.cpp:
	* src/main_window.cpp:
	* src/sample_view.cpp:
	* tool/average_formation.cpp:
	* tool/dttrainer/trainer.cpp:
	* tool/dttrainer/trainer.h:
	- Qt5に対応
	- C++14に対応

2017-06-23  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* m4/qt4.m4:
	- Ubuntu16.04でのエラーに対応

2016-06-13  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* Makefile.am:
	* configure.ac:
	- 存在しないファイルをターゲットから削除
	- 暫定バージョン番号として日付を設定

2016-05-28  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* tool/dttrainer/main.cpp:
	* tool/dttrainer/trainer.cpp:
	- 配列のインデックス誤りのバグを修正

	* tool/dttrainer/main.cpp:
	- ファイル入出力処理を追加

	* tool/dttrainer/trainer.cpp:
	* tool/dttrainer/trainer.h:
	- 学習のループと誤差値の判定を追加．未テスト

2016-05-22  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* tool/dttrainer/main.cpp:
	* tool/dttrainer/trainer.cpp:
	* tool/dttrainer/trainer.h:
	- 三角形分割フォーメーションの学習機能と入出力をほぼ実装．

2016-05-20  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* tool/dttrainer/Makefile.am:
	* tool/dttrainer/main.cpp:
	* tool/dttrainer/memo:
	* tool/dttrainer/trainer.cpp:
	* tool/dttrainer/trainer.h:
	* configure.ac:
	* tool/Makefile.am:
	- 三角形分割フォーメーションモデルを用いた学習プログラムを追加。実
	装途中。

	* m4/qt.m4:
	- OSX環境での不具合に対応

2015-07-18  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/edit_data.cpp:
	- 自動バックアップのファイル名書式を変更

2015-07-10  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* tool/average_formation.cpp:
	- 平均フォーメーションにベースのRoleTypeとMarkerをセットしていなかっ
	た不具合を修正
