@@ -1,3 +1,9 @@
+2019-05-16  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* tool/formation_converter.cpp:
+	* tool/Makefile.am:
+	- フォーメーションファイルを旧版からCSV版へ変換するコマンドを追加
+
 2019-05-07  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* src/main_window.cpp:
